--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -114,7 +114,7 @@
                            accept=".jpg,.jpeg,.png,.gif,.bmp,.tiff">
                     <span class="docs-tooltip" data-toggle="tooltip" data-animation="false"
                           title="Import image with Blob URLs">
-              上传图片
+              选择头像
             </span>
                 </label>
             </div>
