--- a/src/main/resources/templates/admin/question.html
+++ b/src/main/resources/templates/admin/question.html
@@ -108,6 +108,11 @@
                         <i class="ni ni-planet text-blue"></i> 搜索
                     </a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="/admin/controller">
+                        <i class="ni ni-key-25 text-info"></i> 社区设置
+                    </a>
+                </li>
             </ul>
             <!-- Divider -->
             <hr class="my-3">
