--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -140,17 +140,18 @@
                             <a class="issuse-question-people" target="_blank"
                                th:href="'/user/'+ ${question.user.getUserId()}"
                                th:text="${question.user.userName}">人名</a>
-                            <span class="issuse-question-span">是作者
-                                •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
-                                •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
-                                •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
-                                •<span>最新回复时间：</span><span th:text="${question.alterTime}">人数</span>
-                            </span>
+                            <!--<span class="issuse-question-span">是作者-->
+                                <!--•<span th:text="${question.likeCount}">人数</span><span>人关注</span>-->
+                                <!--•<span th:text="${question.commentCount}">人数</span><span>个回复</span>-->
+                                <!--•<span th:text="${question.viewCount}">人数</span><span>次浏览</span>-->
+                                <!--•<span>最新回复时间：</span><span th:text="${question.alterTime}">人数</span>-->
+                            <!--</span>-->
                         </p>
                     </div>
                 </div>
                 <hr/>
             </div>
+
             <!-- 帖子 -->
             <div th:each="question : ${paginationDto.data}">
                 <div class="media">
