添加活跃用户

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -10,7 +10,16 @@
 <div th:fragment="footer">
     <footer class="footer mt-auto py-3">
         <div class="container">
-            <span class="text-muted">Copyright © 2019 · 不挂高数社区</span>
+            <div class="row">
+                <div class="col">
+                    <span class="text-muted">Copyright © 2019 · <a href="/">不挂高数社区</a></span>
+                </div>
+                <div class="col text-right">
+                    <span><a href="/">关于我们</a></span>
+                </div>
+            </div>
+
+
         </div>
     </footer>
     <!-- Modal -->
