--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -175,11 +175,11 @@
                 <a th:href="${'/search/' + paginationDto.search + '/user'}">点击查看更多相关用户</a>
             </div>
             <!-- 图片轮播 -->
-            <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+            <div id="Advertisement" class="carousel slide" data-ride="carousel">
                 <ol class="carousel-indicators">
-                    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-                    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    <li data-target="#Advertisement" data-slide-to="0" class="active"></li>
+                    <li data-target="#Advertisement" data-slide-to="1"></li>
+                    <li data-target="#Advertisement" data-slide-to="2"></li>
                 </ol>
                 <div class="carousel-inner">
                     <div class="carousel-item active">
@@ -195,11 +195,11 @@
                                         alt="Third slide"></a>
                     </div>
                 </div>
-                <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                <a class="carousel-control-prev" href="#Advertisement" role="button" data-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="sr-only">Previous</span>
                 </a>
-                <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                <a class="carousel-control-next" href="#Advertisement" role="button" data-slide="next">
                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                     <span class="sr-only">Next</span>
                 </a>
