--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -231,6 +231,27 @@
                                     <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('Go')">
                                         <span class="ml-1">Go</span>
                                      </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('objective-c')">
+                                        <span class="ml-1">objective-c</span>
+                                     </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('typescript')">
+                                        <span class="ml-1">typescript</span>
+                                     </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('shell')">
+                                        <span class="ml-1">shell</span>
+                                     </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('swift')">
+                                        <span class="ml-1">swift</span>
+                                     </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('ruby')">
+                                        <span class="ml-1">ruby</span>
+                                     </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('lua')">
+                                        <span class="ml-1">lua</span>
+                                     </span>
+                                    <span class="badge badge-primary mr-2 tag-hand" onclick="addTag('scala')">
+                                        <span class="ml-1">scala</span>
+                                     </span>
                                 </div>
                                 <!--平台框架-->
                                 <div class="tab-pane fade" id="frame-work" role="tabpanel" aria-labelledby="frame-work-tab">
@@ -308,6 +329,9 @@
                                      </span>
                                     <span class="badge badge-success mr-2 tag-hand" onclick="addTag('maven')">
                                         <span class="ml-1">maven</span>
+                                     </span>
+                                    <span class="badge badge-success mr-2 tag-hand" onclick="addTag('Gradle')">
+                                        <span class="ml-1">Gradle</span>
                                      </span>
                                 </div>
                                 <!--系统设备-->
