修复问题编辑与页面显示Bug

--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -126,6 +126,7 @@
                 </script>
 
                 <input type="hidden" name="questionId" th:value="${question.getQuestionId()}">
+                <input type="hidden" name="createTime" th:value="${question.getCreateTime()}">
                 <!--TODO 待完成上传附件--->
                 <div class="row">
                     <div class="col-5">
