--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -119,7 +119,8 @@
                         tex: true,  // 默认不解析
                         flowChart: true,  // 默认不解析
                         sequenceDiagram: true,  // 默认不解析
-                        codeFold: true
+                        codeFold: true,
+                        emoji: true
                         // markdown : "[TOC]\n### Hello world!\n## Heading 2", // Also, you can dynamic set Markdown text
                         // htmlDecode : true,  // Enable / disable HTML tag encode.
                         // htmlDecode : "style,script,iframe",  // Note: If enabled, you should filter some dangerous HTML tags for website security.
@@ -455,13 +456,12 @@
         for (var i = 0; i < length; i++) {
             console.log(list[i].id);
             editormd.markdownToHTML(list[i].id, {
-                // tex: true,  // 默认不解析
-                // flowChart: true,  // 默认不解析
-                // sequenceDiagram: true,  // 默认不解析
-                // codeFold: true
-                // markdown : "[TOC]\n### Hello world!\n## Heading 2", // Also, you can dynamic set Markdown text
-                // htmlDecode : true,  // Enable / disable HTML tag encode.
-                // htmlDecode : "style,script,iframe",  // Note: If enabled, you should filter some dangerous HTML tags for website security.
+                htmlDecode      : "style,script,iframe",
+                tex: true,  // 默认不解析
+                flowChart: true,  // 默认不解析
+                sequenceDiagram: true,  // 默认不解析
+                codeFold: true,
+                emoji: true
             });
         }
     });
