修复页面显示Bug

--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -458,8 +458,8 @@
             editormd.markdownToHTML(list[i].id, {
                 htmlDecode      : "style,script,iframe",
                 tex: true,  // 默认不解析
-                flowChart: true,  // 默认不解析
-                sequenceDiagram: true,  // 默认不解析
+                // flowChart: true,  // 默认不解析
+                // sequenceDiagram: true,  // 默认不解析
                 codeFold: true,
                 emoji: true
             });
