添加关于我页面

--- a/src/main/resources/templates/footer.html
+++ b/src/main/resources/templates/footer.html
@@ -15,7 +15,7 @@
                     <span class="text-muted">Copyright © 2019 · <a href="/">不挂高数社区</a></span>
                 </div>
                 <div class="col text-right">
-                    <span><a href="/">关于我们</a></span>
+                    <span><a href="/about">关于我们</a></span>
                 </div>
             </div>
 
