--- a/src/main/resources/templates/userList.html
+++ b/src/main/resources/templates/userList.html
@@ -119,7 +119,9 @@
                 </div>
             </div>
 
+            <div class="container" style="height: 30px">
 
+            </div>
             <!--新用户-->
             <div class="container">
                 <h4>
