--- a/src/main/resources/templates/search.html
+++ b/src/main/resources/templates/search.html
@@ -85,7 +85,7 @@
                             <a class="issuse-question-class" href="#" th:text="${question.classification}">分类</a>
                             <a class="issuse-question-people" th:href="'/user/'+ ${question.user.getUserId()}" th:text="${question.user.userName}">人名</a>
                             <span class="issuse-question-span">是作者
-                                •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
+                                •<span th:text="${question.likeCount}">人数</span><span>人点赞</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
                                 •<span>回复时间：</span><span th:text="${question.alterTime}">人数</span>
