--- a/src/main/resources/templates/user.html
+++ b/src/main/resources/templates/user.html
@@ -181,7 +181,7 @@
                             <a class="issuse-question-class" target="_blank" href="#" th:text="${question.classification}">分类</a>
                             <a class="issuse-question-people" target="_blank" href="#" th:text="${user.userName}">人名</a>
                             <span class="issuse-question-span">
-                                •<span th:text="${question.likeCount}">人数</span><span>人关注</span>
+                                •<span th:text="${question.likeCount}">人数</span><span>人点赞</span>
                                 •<span th:text="${question.commentCount}">人数</span><span>个回复</span>
                                 •<span th:text="${question.viewCount}">人数</span><span>次浏览</span>
                                 •<span>最新修改时间：</span><span th:text="${question.alterTime}">人数</span>
@@ -258,7 +258,7 @@
                     <h5 class="mt-4">个人成就</h5>
                     <hr/>
                     <div class="card-body mb-2">
-                        <img src="/image/icon/like.svg" width="20" height="20">获得<span>100</span>次点赞
+                        <img src="/image/icon/like.svg" width="20" height="20">获得 &nbsp; <span th:text="${user.likeCount}">100</span> &nbsp;次点赞
                     </div>
                 </div>
             </div>
