--- a/src/main/resources/templates/userMessage.html
+++ b/src/main/resources/templates/userMessage.html
@@ -171,7 +171,7 @@
                     <h5 class="mt-4">个人成就</h5>
                     <hr/>
                     <div class="card-body mb-2">
-                        <img src="/image/icon/like.svg" width="20" height="20">获得<span>100</span>次点赞
+                        <img src="/image/icon/like.svg" width="20" height="20">获得 &nbsp; <span th:text="${user.likeCount}">100</span> &nbsp;次点赞
                     </div>
                 </div>
             </div>
