--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -166,7 +166,20 @@
                         <h4><span th:text="${question.commentCount}">16</span>个回复</h4>
                     </div>
                     <div class="col">
-
+                        <ul class="nav justify-content-end">
+                            <li class="nav-item">
+                                <a class="nav-link active" th:href="'/question/' + ${question.getQuestionId()} + @{/(sort=0)}">发帖时间</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" th:href="'/question/' + ${question.getQuestionId()} + @{/(sort=1)}">倒序</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" th:href="'/question/' + ${question.getQuestionId()} + @{/(sort=2)}">最多点赞</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link active" th:href="'/question/' + ${question.getQuestionId()} + @{/(sort=3)}">最多评论</a>
+                            </li>
+                        </ul>
                     </div>
                 </div>
             </div>
@@ -189,9 +202,10 @@
 
                         <div class="row mt-2 mb-2">
                             <div class="col">
-                                <button type="button" class="btn btn-outline-primary btn-sm">
+                                <button type="button" class="btn btn-outline-primary btn-sm" onclick="clickLikeComment(this, 1)"
+                                        th:data-id="${comment.getCommentId()}">
                                     <img src="/image/icon/clicklike.svg" width="auto" height="20">
-                                    <span class="badge badge-light" th:text="${comment.getLikeCount()}">0</span>
+                                    <span th:id="${'comment-likeCount-' + comment.getCommentId()}" class="badge badge-light" th:text="${comment.getLikeCount()}">0</span>
                                 </button>
                                 <button type="button" class="btn btn-outline-dark btn-sm ml-2"
                                         th:data-id="${comment.getCommentId()}"
@@ -261,7 +275,7 @@
                     <ul class="pagination justify-content-end">
                         <!-- 返回首页 -->
                         <li class="page-item" th:if="${comments.showFirstPage}">
-                            <a class="page-link" id="first-page-a" th:href="'/question/' + ${question.getQuestionId()}"
+                            <a class="page-link" id="first-page-a" th:href="'/question/' + ${question.getQuestionId()} + @{/(sort=${sort})}"
                                aria-label="Previous" onclick="addLocaleUrlForPage('first-page-a')">
                                 <span aria-hidden="true">&laquo;&laquo;</span>
                                 <span class="sr-only">Previous</span>
@@ -270,7 +284,7 @@
                         <!-- 上一页 -->
                         <li class="page-item" th:if="${comments.showPrevious}">
                             <a class="page-link" id="link-to-last-a"
-                               th:href="'/question/'+ ${question.getQuestionId()} + @{/(page=${comments.nowPage} - 1)}"
+                               th:href="'/question/'+ ${question.getQuestionId()} + @{/(page=${comments.nowPage-1},sort=${sort})}"
                                aria-label="Previous"
                                onclick="addLocaleUrlForPage('link-to-last-a')">
                                 <span aria-hidden="true">&laquo;</span>
@@ -281,7 +295,7 @@
 
                         <li class="page-item" th:each="page : ${comments.pages}"
                             th:class="${comments.nowPage == page}? 'page-item active' : 'page-item'">
-                            <a class="page-link" th:href="${'/question/'+question.getQuestionId()} + @{/(page=${page})}"
+                            <a class="page-link" th:href="${'/question/'+question.getQuestionId()} + @{/(page=${page},sort=${sort})}"
                                th:text="${page}" th:id="${page}"
                                th:onclick="'javascript:addLocaleUrlForPage(\''+${page}+'\')'">
                                 1
@@ -292,7 +306,7 @@
                         <!-- 下一页 -->
                         <li class="page-item" th:if="${comments.showNext}">
                             <a class="page-link" id="lind-to-next-a"
-                               th:href="'/question/'+${question.getQuestionId()} + @{/(page=${comments.nowPage} + 1)}"
+                               th:href="'/question/'+${question.getQuestionId()} + @{/(page=${comments.nowPage+1},sort=${sort})}"
                                aria-label="Next"
                                onclick="addLocaleUrlForPage('lind-to-next-a')">
                                 <span aria-hidden="true">&raquo;</span>
@@ -302,7 +316,7 @@
                         <!-- 最后一页 -->
                         <li class="page-item" th:if="${comments.showEndPage}">
                             <a class="page-link" id="link-to-end-a"
-                               th:href="'/question/'+${question.getQuestionId()} + @{/(page=${comments.totalPage})}"
+                               th:href="'/question/'+${question.getQuestionId()} + @{/(page=${comments.totalPage},sort=${sort})}"
                                th:if="${comments.showEndPage}"
                                aria-label="Next" onclick="addLocaleUrlForPage('link-to-end-a')">
                                 <span aria-hidden="true">&raquo;&raquo;</span>
